# MoaDev

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md
.claude/: settings.json
.codex/: config.toml
.github/: pull_request_template.md
docs/: agents-product.ko.md  agents-product.md  architecture.md  claude-code-guide.ko.md  claude-code-guide.md  conventions.md  db-schema.md  platform-topology.ko.md  platform-topology.md  prd.ko.md  prd.md  product-plan.ko.md  product-plan.md  production-plan.md  (+3 more)
services/agents-runtime/: Dockerfile  pyproject.toml
services/agents-runtime/app/: __init__.py  runtime.py  worker.py
services/agents-runtime/tests/: test_runtime.py  test_worker.py
services/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 20260421_0001_article_persistence_baseline.py
services/api/app/: __init__.py  main.py
services/api/app/api/: router.py
services/api/app/api/dependencies/: auth.py  db.py
services/api/app/api/endpoints/: __init__.py  health.py
services/api/app/api/v1/: router.py
services/api/app/api/v1/endpoints/: articles.py  categories.py  feeds.py
services/api/app/core/: config.py  db.py  security.py
services/api/app/domain/articles/: __init__.py  models.py  service.py
services/api/app/schemas/: __init__.py  article.py  feed.py
services/api/app/services/: feed_catalog.py
services/api/tests/: auth_token_helpers.py  test_app_factory.py  test_article_persistence.py  test_articles_api.py  test_feed_catalog.py  test_main.py
(+118 files in other folders)
