[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "moadev-api"
version = "0.1.0"
description = "FastAPI service for MoaDev feeds and health endpoints."
requires-python = ">=3.9"
dependencies = [
  "fastapi==0.128.8",
  "uvicorn>=0.30,<1"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "ruff>=0.4,<1"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
